[gd_scene load_steps=4 format=3 uid="uid://7t12kcjbimpu"]

[ext_resource type="Script" path="res://midpoint.gd" id="1_70wol"]
[ext_resource type="PackedScene" path="res://line_edit.tscn" id="2_qm2fx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dkfb4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_70wol")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_direction = 3
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Menu" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "MENU"

[node name="Clear" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "CLEAR"

[node name="Random" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_qm2fx")]
layout_mode = 2
placeholder_text = "R"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "SHOW CIRCLES"

[node name="Start" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "START"

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_dkfb4")

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="gui_input" from="VBoxContainer/Panel" to="." method="_on_panel_gui_input"]
